# MSO-Mongo-Schema-Object-Library

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
MSO/: __init__.py  base_model.py  generator.py  mongo_helpers.py  schema_loader.py  threading_cleanup_warning.py  utils.py
examples/: class_structure.py  clone.py  compare.py  create_and_save_dict.py  create_and_save_obj.py  data_analytics.py  delete_and_restore.py  dict_serialization.py  example_validator.json  field_validation.py  find_one_find_many.py  find_one_view.py  find_view.py  launch_api.py  lifecycle_hooks.py  mongo_helpers.py  read_only_find_many.py  read_only_to_dict.py  timestamps.py
mso/: __init__.py  api.py  base_model.py  generator.py  utils.py
testing/: test_runner.py
testing/database/: db_config.py  initialize_test_db.py  people_schema.json
